--- a/web/index.html
+++ b/web/index.html
@@ -15,6 +15,7 @@
 <script src="/bower_components/angular-route/angular-route.min.js"></script>
 <script src="/bower_components/angular-resource/angular-resource.min.js"></script>
 <script src="/app.js"></script>
+<script src="/config.js"></script>
 <script src="/modules/auth/auth.js"></script>
 <script src="/modules/referee/referee.js"></script>
 </body></html>
