--- a/web/modules/auth/login.html
+++ b/web/modules/auth/login.html
@@ -1,9 +1,7 @@
 <div>
   <ul>
-    <li><a href="#login">Log In</a></li>
-
     <li><button ng-click="oauth('google')">Google</button></li>
     
-    <li><a href="#/referees">Referee List</a></li>
+    <li><a href="#/home">Home</a></li>
   </ul>
 </div>
