--- a/web/index.html
+++ b/web/index.html
@@ -11,9 +11,9 @@
 </head>
 <body>
 <div ng-view></div>
-<script src="/bower_components/angular/angular.min.js"></script>
-<script src="/bower_components/angular-route/angular-route.min.js"></script>
-<script src="/bower_components/angular-resource/angular-resource.min.js"></script>
+<script src="/vendor/angular/angular.min.js"></script>
+<script src="/vendor/angular-route/angular-route.min.js"></script>
+<script src="/vendor/angular-resource/angular-resource.min.js"></script>
 <script src="/app.js"></script>
 <script src="/config.js"></script>
 <script src="/modules/auth/auth.js"></script>
