--- a/web/modules/auth/login.html
+++ b/web/modules/auth/login.html
@@ -1,7 +1,9 @@
 <div>
   <ul>
-    <li><button ng-click="oauth('google')">Google</button></li>
+    <li><button ng-click="oauthConnect('google')">Google</button></li>
     
     <li><a href="#/home">Home</a></li>
+    
+    <li><button ng-click="oauthSubmit()">Submit Token</button></li>
   </ul>
 </div>
