--- a/web/index.html
+++ b/web/index.html
@@ -6,7 +6,7 @@
   <title>Refs</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="/favicon.ico?bust=2" >
-  <link rel="stylesheet" type="text/css" href="/bower_components/bootstrap/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="/vendor/bootstrap/dist/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="/app.css">
 </head>
 <body>
@@ -14,6 +14,7 @@
 <script src="/vendor/angular/angular.min.js"></script>
 <script src="/vendor/angular-route/angular-route.min.js"></script>
 <script src="/vendor/angular-resource/angular-resource.min.js"></script>
+<script src="/vendor/ngstorage/ngStorage.min.js"></script>
 <script src="/app.js"></script>
 <script src="/config.js"></script>
 <script src="/modules/auth/auth.js"></script>
