--- a/web/modules/auth/login.html
+++ b/web/modules/auth/login.html
@@ -1,6 +1,7 @@
 <div>
   <ul>
-    <li><button ng-click="oauthConnect('google')">Google</button></li>
+    <li><button ng-click="oauthConnect('google')  ">Google</button></li>
+    <li><button ng-click="oauthConnect('facebook')">Facebook</button></li>
     
     <li><a href="#/home">Home</a></li>
     
