--- a/web/modules/referee/referee-update.html
+++ b/web/modules/referee/referee-update.html
@@ -1,4 +1,4 @@
-<div ng-submit="update()">
+<div ng-submit="refereeUpdate.update()" ng-init="referee = refereeUpdate.referee">
   <form name="form" class="css-form" novalidate>
     <label>First Name:</label><input type="text" ng-model="referee.name_first" name="name_first" required ><br>
     <label>Last  Name:</label><input type="text" ng-model="referee.name_last"  name="name_last"  required ><br>
