--- a/web/index.html
+++ b/web/index.html
@@ -26,7 +26,7 @@
 <div ng-view></div>
 <script src="/vendor/angular/angular.min.js"></script>
 <script src="/vendor/angular-route/angular-route.min.js"></script>
-<script src="/vendor/angular-resource/angular-resource.min.js"></script>
+<script src="/vendor/angular-resource/angular-resource.js"></script>
 <script src="/vendor/ngstorage/ngStorage.min.js"></script>
 <script src="/app.js"></script>
 <script src="/config.js"></script>
