Added access control to headers. Revamped Referee constructor. Start of OAuth Integeration Working oauth implementation Login form JWT for oauth state RefereeRepository changes promises

--- a/web/modules/referee/referee-show.html
+++ b/web/modules/referee/referee-show.html
@@ -1,7 +1,7 @@
-<div ng-init="referee = refereeShow.referee">
-  {{ referee.id }} 
-  {{ referee.name_first }} 
-  {{ referee.name_last }} 
-  X {{ referee.name_full }} X {{ referee.type }} 
+<div>
+  {{ refereeShow.referee.id }} 
+  {{ refereeShow.referee.name_first }} 
+  {{ refereeShow.referee.name_last }} 
+  {{ refereeShow.referee.name_full }} Y
       <a href="#/referees">Back to List</a>
 </div>
