--- a/web/index.html
+++ b/web/index.html
@@ -29,7 +29,7 @@
 <script src="/vendor/angular-resource/angular-resource.js"></script>
 <script src="/vendor/ngstorage/ngStorage.min.js"></script>
 <script src="/app.js"></script>
-<script src="/config.js"></script>
+<script src="/app-config.js"></script>
 <script src="/modules/auth/auth.js"></script>
 <script src="/modules/referee/referee-controller.js"></script>
 <script src="/modules/referee/referee-model.js"></script>
